force-app/main/default/objects/Project_Status__c/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <label>Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12100</fullName>
                <label>Nexus Administration Finance &amp; Legal</label>
            </value>
            <value>
                <fullName>12101</fullName>
                <label>Nexus Editoria</label>
            </value>
            <value>
                <fullName>12102</fullName>
                <label>Nexus HR</label>
            </value>
            <value>
                <fullName>12103</fullName>
                <label>Nexus Nox - Progetti</label>
            </value>
            <value>
                <fullName>12104</fullName>
                <label>Nexus Operations</label>
            </value>
            <value>
                <fullName>12105</fullName>
                <label>Nexus Progetti</label>
            </value>
            <value>
                <fullName>12106</fullName>
                <label>Nexus Sales - Operations</label>
            </value>
            <value>
                <fullName>12107</fullName>
                <label>Nexus Sales - Progetti</label>
            </value>
            <value>
                <fullName>12108</fullName>
                <label>Nexus Sales - SalesForce</label>
            </value>
            <value>
                <fullName>12109</fullName>
                <label>Nexus Sales - T&amp;M</label>
            </value>
            <value>
                <fullName>12110</fullName>
                <label>Nexus Support - IT</label>
            </value>
            <value>
                <fullName>12111</fullName>
                <label>Nexus T&amp;M</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>