force-app/main/default/objects/Project_Status__c/fields/Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Accuracy__c</fullName>
    <label>Σ Accuracy (gg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>