force-app/main/default/objects/Project_Status__c/fields/AmountProjectSumm__c.field-meta.xml
<CustomField>
    <fullName>AmountProjectSumm__c</fullName>
    <label>AmountProjectSumm</label>
    <summarizedField>Issue__c.IssueCostApp__c</summarizedField>
    <summaryForeignKey>Issue__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>