force-app/main/default/objects/Project_Status__c/fields/AmountProjectSummApp__c.field-meta.xml
<CustomField>
    <fullName>AmountProjectSummApp__c</fullName>
    <label>AmountProjectSummApp</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>