force-app/main/default/objects/Project_Status__c/fields/Annotazioni_sul_budget__c.field-meta.xml
<CustomField>
    <fullName>Annotazioni_sul_budget__c</fullName>
    <label>Annotazioni</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>