force-app/main/default/objects/Project_Status__c/fields/Budget_gg__c.field-meta.xml
<CustomField>
    <fullName>Budget_gg__c</fullName>
    <label>Budget (gg)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>