force-app/main/default/objects/Project_Status__c/fields/Codice_Account__c.field-meta.xml
<CustomField>
    <fullName>Codice_Account__c</fullName>
    <inlineHelpText>Codice del Tempo Account di Jira</inlineHelpText>
    <label>Codice Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>