force-app/main/default/objects/Project_Status__c/fields/Consuntivo_gg__c.field-meta.xml
<CustomField>
    <fullName>Consuntivo_gg__c</fullName>
    <label>Consuntivo (gg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>