force-app/main/default/objects/Project_Status__c/fields/Data_Aggiornamento__c.field-meta.xml
<CustomField>
    <fullName>Data_Aggiornamento__c</fullName>
    <label>Data Aggiornamento</label>
    <type>Date</type>
</CustomField>