force-app/main/default/objects/Project_Status__c/fields/Data_fine_prevista__c.field-meta.xml
<CustomField>
    <fullName>Data_fine_prevista__c</fullName>
    <label>Data fine prevista</label>
    <type>Date</type>
</CustomField>