force-app/main/default/objects/Project_Status__c/fields/Est_Time_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Est_Time_Remaining__c</fullName>
    <label>Σ Est. Time Remaining (gg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>