force-app/main/default/objects/Project_Status__c/fields/FTE__c.field-meta.xml
<CustomField>
    <fullName>FTE__c</fullName>
    <formula>if(FTE_Mancanti__c == 0 ,0,ROUND(Stima_gg_a_terminare__c /FTE_Mancanti__c,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FTE</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>