force-app/main/default/objects/Project_Status__c/fields/FTE_Mancanti__c.field-meta.xml
<CustomField>
    <fullName>FTE_Mancanti__c</fullName>
    <label>Giorni disponibili Rimanenti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>