force-app/main/default/objects/Project_Status__c/fields/Media_FTE__c.field-meta.xml
<CustomField>
    <fullName>Media_FTE__c</fullName>
    <label>Media FTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>