force-app/main/default/objects/Project_Status__c/fields/Original_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Original_Estimate__c</fullName>
    <label>Σ Original Estimate (gg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>