force-app/main/default/objects/Project_Status__c/fields/OriginalEstimateGG__c.field-meta.xml
<CustomField>
    <fullName>OriginalEstimateGG__c</fullName>
    <label>Σ Original Estimate (gg)</label>
    <summarizedField>Issue__c.Original_Estimate_g__c</summarizedField>
    <summaryForeignKey>Issue__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>