force-app/main/default/objects/Project_Status__c/fields/Project_Sentiment_Value__c.field-meta.xml
<CustomField>
    <fullName>Project_Sentiment_Value__c</fullName>
    <label>Project Sentiment Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alarm</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Ok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>