force-app/main/default/objects/Project_Status__c/fields/Scostamento_dal_budget__c.field-meta.xml
<CustomField>
    <fullName>Scostamento_dal_budget__c</fullName>
    <formula>Budget_gg__c - ( Stima_gg_a_terminare__c +  Consuntivo_gg__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scostamento dal budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>