force-app/main/default/objects/Project_Status__c/fields/Scostamento_percentuale__c.field-meta.xml
<CustomField>
    <fullName>Scostamento_percentuale__c</fullName>
    <formula>Scostamento_dal_budget__c /  Budget_gg__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scostamento percentuale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>