force-app/main/default/objects/Project_Status__c/fields/SendInvoiceEmail__c.field-meta.xml
<CustomField>
    <fullName>SendInvoiceEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendInvoiceEmail</label>
    <type>Checkbox</type>
</CustomField>