force-app/main/default/objects/Project_Status__c/fields/Stato__c.field-meta.xml
<CustomField>
    <fullName>Stato__c</fullName>
    <label>Stato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analisi requisiti</fullName>
                <default>true</default>
                <label>Analisi requisiti</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>WIP</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Deploy in Produzione</fullName>
            </value>
            <value>
                <fullName>Supporto post go-live</fullName>
            </value>
            <value>
                <fullName>Completato</fullName>
            </value>
            <value>
                <fullName>Fatturato</fullName>
                <isActive>false</isActive>
                <label>Fatturato</label>
            </value>
            <value>
                <fullName>Invio Fattura</fullName>
                <isActive>false</isActive>
                <label>Invio Fattura</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>