force-app/main/default/objects/Project_Status__c/fields/Stato_attuale__c.field-meta.xml
<CustomField>
    <fullName>Stato_attuale__c</fullName>
    <formula>Consuntivo_gg__c / (Consuntivo_gg__c + Stima_gg_a_terminare__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stato attuale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>