force-app/main/default/objects/Project_Status__c/fields/Stima_gg_a_terminare__c.field-meta.xml
<CustomField>
    <fullName>Stima_gg_a_terminare__c</fullName>
    <label>Stima a terminare (gg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>