force-app/main/default/objects/Project_Status__c/fields/Time_Tracking_Report__c.field-meta.xml
<CustomField>
    <fullName>Time_Tracking_Report__c</fullName>
    <label>Time Tracking Report</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>