force-app/main/default/objects/Project_Status__c/fields/TimeSpentGGapp__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentGGapp__c</fullName>
    <label>ΣTimSpent (gg)app</label>
    <summarizedField>Issue__c.TimeSpentDays__c</summarizedField>
    <summaryForeignKey>Issue__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>