force-app/main/default/objects/Project_Status__c/fields/TimSpentgg__c.field-meta.xml
<CustomField>
    <fullName>TimSpentgg__c</fullName>
    <formula>TimeSpentGGapp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Σ Time Spent (gg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>