force-app/main/default/objects/Project_Status__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Progetto</fullName>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>