force-app/main/default/objects/Project_Status__c/recordTypes/Nexus.recordType-meta.xml
<RecordType>
    <fullName>Nexus</fullName>
    <active>true</active>
    <label>Nexus</label>
</RecordType>