force-app/main/default/objects/Project_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>Codice_Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stato__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>